--- a/R/etest_07_report.Rmd
+++ b/R/etest_07_report.Rmd
@@ -131,3 +131,9 @@ plot(score1 ~ bird, data = quiz07,
 ```{r, echo = FALSE}
 pander(t.test(score1 ~ bird, data = quiz07))
 ```
+
+## Save
+
+```{r, echo = FALSE}
+saveRDS(quiz07, file = "quiz07.RDs")
+```
