--- a/R/Oxford_Happiness1801_Report.Rmd
+++ b/R/Oxford_Happiness1801_Report.Rmd
@@ -36,7 +36,9 @@ oxford$Group %<>% factor(levels = c("Red", "Black"),
 #> (역) 또는 (R) 항목은 7에서 뺀 점수로 
 oxford[, paste0("Q", c(1, 5, 6, 10, 13, 14, 24, 27:29))] %<>% 
   `-` (7, .)
-oxford$Scores <- oxford[ , 3:31] %>% apply(MARGIN = 1, FUN = function(x) sum(x) / 29)
+oxford$Scores <- oxford[ , 3:31] %>% 
+#  apply(MARGIN = 1, FUN = function(x) sum(x) / 29) 
+  apply(MARGIN = 1, FUN = {. %>% sum %>% `/`(29)})
 # oxford$Diff <- round(oxford$Scores_M - oxford$Scores, digits = 3)
 oxford$Diff <- oxford %$% 
   `-`(Scores_M, Scores) %>% 
