--- a/R/Class_BFI_MI_1801_report_Summary.Rmd
+++ b/R/Class_BFI_MI_1801_report_Summary.Rmd
@@ -22,7 +22,7 @@ load("./BFI_MI_1801v2.RData")
 ls()
 str(BFI)
 str(MI)
-str(class.roll)
+str(class_roll)
 options(width=180)
 ```
 
@@ -106,7 +106,7 @@ pander(BFI.level.kr.2)
 전체 출석부로 통합하고, 실험에 참여하지 않은 사람들은 `<NA>`로 표시.
 
 ```{r}
-BFI.full.kr<-join(class.roll, BFI.level.kr.2, by="ID")
+BFI.full.kr<-join(class_roll, BFI.level.kr.2, by="ID")
 pander(BFI.full.kr[, -2])
 ```
 
@@ -137,7 +137,7 @@ pander(MI.score.kr)
 
 ```{r}
 (MI.na.id <- which(apply(MI.score.kr, 1, function(x)any(is.na(x)))))
-(MI.ok.id <- setdiff(1:nrow(class.roll), MI.na.id))
+(MI.ok.id <- setdiff(1:nrow(class_roll), MI.na.id))
 MI.score.kr.ok <- MI.score.kr[MI.ok.id, ]
 MI.order.kr <- apply(MI.score.kr.ok, 1, order, decreasing = TRUE)
 pander(t(MI.order.kr))
@@ -158,7 +158,7 @@ pander(MI.sort.kr.2)
 출석부에 통합
 
 ```{r}
-MI.sort.full.kr<-join(class.roll, MI.sort.kr.2, by="ID")
+MI.sort.full.kr<-join(class_roll, MI.sort.kr.2, by="ID")
 pander(MI.sort.full.kr[, -2])
 ```
 
@@ -173,33 +173,33 @@ pander(BFI.MI.full[, -2])
 ```
 
 이름을 빼고 학번만 표시
--->
+
 
 ```{r, ids only to show, echo = FALSE}
 BFI.MI.full.ID <- BFI.MI.full[,-2]
 pander(BFI.MI.full.ID[order(BFI.MI.full.ID$ID), ])
 ```
 
-<!--결석생 확인
+결석생 확인
 -----------
 
 BFI결석생
 
 ```{r, echo = FALSE, results = 'markup'}
-BFI.present<-which(class.roll$ID %in% BFI$ID[BFI.ok.id])
-BFI.absent<-(1:nrow(class.roll))[-BFI.present]
+BFI.present<-which(class_roll$ID %in% BFI$ID[BFI.ok.id])
+BFI.absent<-(1:nrow(class_roll))[-BFI.present]
 BFI.absent
-class.roll$ID[BFI.absent]
-class.roll$Name[BFI.absent]
+class_roll$ID[BFI.absent]
+class_roll$Name[BFI.absent]
 ```
 
 MI 결석생
 
 ```{r, echo = FALSE, results = 'markup'}
-MI.present<-which(class.roll$ID %in% MI$ID[MI.ok.id])
-MI.absent<-(1:nrow(class.roll))[-MI.present]
+MI.present<-which(class_roll$ID %in% MI$ID[MI.ok.id])
+MI.absent<-(1:nrow(class_roll))[-MI.present]
 MI.absent
-class.roll$ID[MI.absent]
-class.roll$Name[MI.absent]
+class_roll$ID[MI.absent]
+class_roll$Name[MI.absent]
 ```
 -->
