--- a/R/quiz181001_02_Report.Rmd
+++ b/R/quiz181001_02_Report.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Quiz 181001_02"
 author: "coop711"
-date: "`r Sys.Date()`"
+date: "2018-10-01_2"
 output: html_document
 ---
 
@@ -45,9 +45,9 @@ quiz1001_02$Q3 <- factor(quiz1001_02$Q3,
                       labels = c("60% 낮은 임금", "실직 가능성", "나쁜 건강", "활동 불참", "덜 신뢰"))
 quiz1001_02$Q4 <- factor(quiz1001_02$Q4, 
                       levels = c("1번", "2번", "3번", "4번", "5번", "9번", "무응답"))
-quiz1001_02$Q4.2 <- quiz1001_02$Q4
-levels(quiz1001_02$Q4.2[quiz1001_02$group == "Black"]) <- c("5번", "4번", "3번", "2번", "1번", "9번", "무응답")
-levels(quiz1001_02$Q4.2) <- c("제조업구조조정", "최저임금인상", "경기부진", "정부대응능력부족", "인구구조변화", "모름/무응답", "불참")
+quiz1001_02$Q4_2 <- quiz1001_02$Q4
+levels(quiz1001_02$Q4_2[quiz1001_02$group == "Black"]) <- c("5번", "4번", "3번", "2번", "1번", "9번", "무응답")
+levels(quiz1001_02$Q4_2) <- c("제조업구조조정", "최저임금인상", "경기부진", "정부대응능력부족", "인구구조변화", "모름/무응답", "불참")
 str(quiz1001_02)
 ```
 
@@ -153,10 +153,10 @@ tbl_q3_a %>%
 응답 문항 순(Red), 또는 응답 문항 역순(Black)에 따라 응답이 달라짐. 통계적으로 유의한 차이가 관찰됨. "불참" => "모름/무응답" 으로 재분류.
 
 ```{r, investigation, echo = FALSE}
-# levels(quiz1001_02$Q4.2) <- c("제조업구조조정", "최저임금인상", "경기부진", "정부대응능력부족", "인구구조변화", "모름/무응답", "모름/무응답")
-levels(quiz1001_02$Q4.2)[levels(quiz1001_02$Q4.2) %in% c("모름/무응답", "불참")] <- 
+# levels(quiz1001_02$Q4_2) <- c("제조업구조조정", "최저임금인상", "경기부진", "정부대응능력부족", "인구구조변화", "모름/무응답", "모름/무응답")
+levels(quiz1001_02$Q4_2)[levels(quiz1001_02$Q4_2) %in% c("모름/무응답", "불참")] <- 
   "모름/무응답"
-tbl_q4_a <- quiz1001_02$Q4.2 %>%
+tbl_q4_a <- quiz1001_02$Q4_2 %>%
   table(quiz1001_02$group, ., useNA = "ifany") %>%
   cbind(., "계" = rowSums(.)) %>%
   rbind(., "계" = colSums(.))
@@ -185,7 +185,7 @@ tbl_q4_a %>%
 ##### % 합계
 
 ```{r, overall percentage, echo = FALSE}
-tbl_q4 <- quiz1001_02$Q4.2 %>%
+tbl_q4 <- quiz1001_02$Q4_2 %>%
   table(useNA = "no") %>%
   prop.table %>%
   `*`(100) %>%
